# dagster_img_preprocess

./: .gitignore  README.md  pyproject.toml
.tmp_dagster_home_020gg1ne/history/: runs.db
.tmp_dagster_home_020gg1ne/history/runs/: .db  083ac87a-1c5e-4e8a-acb0-1f6887208ebc.db  0fe3d5c2-994c-4ff4-9427-3bf742f8e70c.db  186ef017-0c7d-4ef1-9df6-2a1d94467caf.db  1b22a3c1-38b3-4840-80fd-ee5aeb237419.db  1da7eaa2-16c7-48c4-b839-ea37a94628d7.db  2069d8f1-e1ee-49aa-b37f-ce724127bc12.db  252a2b4c-6a5e-4dee-a8ad-95680c345d41.db  29114375-eb0d-4902-9403-1b76636f2f7b.db  2e9bbba5-3420-4ec3-9e4d-78dc5efbc0f5.db  47788de4-8141-44f8-9bcf-70a26edadb34.db  497c059c-2b08-4da2-ad93-77a88fdaf1f8.db  5a518cb4-e29b-44be-9501-32b5f1c97715.db  618f6c4f-18b2-4724-946a-35c5958c5f29.db  663d80dc-0ae6-42ed-b045-72044cb026a5.db  79a01eeb-bd1f-45f1-9db8-755c95c1046a.db  7b42c357-23fb-4934-b161-eed94a26168e.db  867c5f68-6cc2-4dde-9548-e58056e24c03.db  8b0ceb7c-d418-42b1-945c-8c728f8ee586.db  988c68c0-e42b-4cd5-bb54-50b9e4b2e8bd.db  9c98c01d-eb07-41a3-9629-e999ffb0922c.db  9cf82c76-e631-41b4-a11c-a20c22d2f1c7.db  ac0f5429-6abe-4886-8923-eee9efa364db.db  b63116e5-2019-44c4-905d-1b7ef2c53404.db  be4d77f3-0cff-4136-94dd-b96d58cf38e0.db  c3da5134-f53e-4d95-8961-200d518d521e.db  c5a1a405-5677-43b3-8aeb-261317098da8.db  index.db  (+8 more)
.tmp_dagster_home_020gg1ne/schedules/: schedules.db
.tmp_dagster_home_h3jglr7u/history/: runs.db
.tmp_dagster_home_h3jglr7u/schedules/: schedules.db
config/: plate_mapping.csv
data/: generate_plate_reff_tbl.py
src/dagster_img_preprocess/: definitions.py
(+195 files in other folders)
