[project]
name = "dagster_img_preprocess"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.6",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_img_preprocess"
registry_modules = [
    "dagster_img_preprocess.components.*",
]


